[package]
name = "lockfree_metrics_macros"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true
name = "lockfree_metrics_macros"

[dependencies]
heck = "0.5"
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features  = ["parsing"] }
metrics_lockfree = { path = "../metrics_lockfree/" } 
